# news-backend

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  cache.py  cli.py  config.py  exceptions.py  main.py  utils.py
app/api/v1/: news.py
app/db/: __init__.py  init.py
app/models/: __init__.py  article.py  intent.py  location.py  schemas.py  user_event.py
app/services/: category.py  event_generator.py  ingest.py  news.py  trending.py
app/services/geocoder/: __init__.py  adapter.py
app/services/llm/: __init__.py  adapter.py  openai.py
docs/: DESIGN.md
